syntax = "proto3";
package lavanet.lava.conflict;

option go_package = "github.com/lavanet/lava/x/conflict/types";
import "gogoproto/gogo.proto";  

message Provider {
  string account = 1;
  bytes response = 2;
}

message Voter {
  string account =1;
  bytes hashResponse = 2;
}

message ConflictVote {
  string index = 1; 
  uint64 voteID = 2; 
  uint64 voteDeadline = 3; 
  uint64 voteStartBlock = 4;
  bool voteIsCommit = 5; 
  string chainID = 6; 
  string apiUrl = 7; 
  bytes requestData = 8; 
  uint64 requestBlock = 9;
  Provider firstProvider = 10 [(gogoproto.nullable) = false]; 
  Provider secondProvider = 11 [(gogoproto.nullable) = false]; 
  repeated Voter voters = 12 [(gogoproto.nullable) = false]; 
}

